# cosmic-ext-applet-privacy-indicator

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: release.yml
res/: dev.DBrox.CosmicPrivacyIndicator.desktop  dev.DBrox.CosmicPrivacyIndicator.metainfo.xml  install.sh  packaging.just
src/: applet.rs  camera.rs  main.rs  rec_icon.rs
